--- a/KeyScan.ui
+++ b/KeyScan.ui
@@ -193,6 +193,60 @@ QPushButton:hover {
      </property>
      <layout class="QHBoxLayout" name="row6_layout"/>
     </widget>
+    <widget class="QWidget" name="KeyArrowsContainer" native="true">
+     <property name="geometry">
+      <rect>
+       <x>770</x>
+       <y>269</y>
+       <width>151</width>
+       <height>121</height>
+      </rect>
+     </property>
+     <widget class="QWidget" name="horizontalLayoutWidget_2">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>70</y>
+        <width>151</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <layout class="QHBoxLayout" name="bottom_arrow_layout"/>
+     </widget>
+     <widget class="QWidget" name="horizontalLayoutWidget_4">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>10</y>
+        <width>151</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <layout class="QHBoxLayout" name="top_arrow_layout"/>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="horizontalLayoutWidget_5">
+     <property name="geometry">
+      <rect>
+       <x>760</x>
+       <y>30</y>
+       <width>160</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <layout class="QHBoxLayout" name="row_7_layout"/>
+    </widget>
+    <widget class="QWidget" name="horizontalLayoutWidget_6">
+     <property name="geometry">
+      <rect>
+       <x>760</x>
+       <y>90</y>
+       <width>160</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <layout class="QHBoxLayout" name="row_8_layout"/>
+    </widget>
    </widget>
   </widget>
  </widget>
