--- a/KeyScan.ui
+++ b/KeyScan.ui
@@ -101,32 +101,36 @@ QPushButton:hover {
     <property name="geometry">
      <rect>
       <x>110</x>
-      <y>140</y>
+      <y>100</y>
       <width>1151</width>
-      <height>361</height>
+      <height>321</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton {
-    background-color: #f1f5f9;   
-    border: 1px solid #9ca3af;    
-    border-radius: 6px;            
-    padding: 5px 10px;
-    font: bold 12px &quot;Arial&quot;;
-    min-width: 20px;
-    margin: 2px;
+    background-color: #e0f2fe;  
+    border: 1px solid #38bdf8; 
+    border-radius: 6px;        
+    border-bottom-width: 2px; 
+    border-bottom-color: #0284c7; 
+	padding: 9px 9px;
+    font: bold 12px &quot;Arial&quot;;    
+    min-width: 20px;           
     min-height: 20px;
+    margin: 2px;
 }
+
 #KeyboardContainer {
-   background-color: #86efac;
+   background-color: #e7e5e4;
    border-radius: 10px;
+   border: 1px solid #94a3b8
 }</string>
     </property>
     <widget class="QWidget" name="horizontalLayoutWidget_7">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>230</y>
+       <y>210</y>
        <width>741</width>
        <height>51</height>
       </rect>
@@ -137,7 +141,7 @@ QPushButton:hover {
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>180</y>
+       <y>160</y>
        <width>741</width>
        <height>51</height>
       </rect>
@@ -148,7 +152,7 @@ QPushButton:hover {
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>80</y>
+       <y>60</y>
        <width>741</width>
        <height>51</height>
       </rect>
@@ -159,7 +163,7 @@ QPushButton:hover {
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>30</y>
+       <y>10</y>
        <width>741</width>
        <height>51</height>
       </rect>
@@ -170,7 +174,7 @@ QPushButton:hover {
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>130</y>
+       <y>110</y>
        <width>741</width>
        <height>51</height>
       </rect>
@@ -181,7 +185,7 @@ QPushButton:hover {
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>280</y>
+       <y>260</y>
        <width>741</width>
        <height>51</height>
       </rect>
@@ -192,8 +196,8 @@ QPushButton:hover {
      <property name="geometry">
       <rect>
        <x>760</x>
-       <y>160</y>
-       <width>171</width>
+       <y>190</y>
+       <width>191</width>
        <height>121</height>
       </rect>
      </property>
@@ -202,7 +206,7 @@ QPushButton:hover {
        <rect>
         <x>0</x>
         <y>70</y>
-        <width>171</width>
+        <width>191</width>
         <height>51</height>
        </rect>
       </property>
@@ -212,8 +216,8 @@ QPushButton:hover {
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>10</y>
-        <width>171</width>
+        <y>20</y>
+        <width>191</width>
         <height>51</height>
        </rect>
       </property>
@@ -225,7 +229,7 @@ QPushButton:hover {
       <rect>
        <x>760</x>
        <y>30</y>
-       <width>171</width>
+       <width>191</width>
        <height>51</height>
       </rect>
      </property>
@@ -235,8 +239,8 @@ QPushButton:hover {
      <property name="geometry">
       <rect>
        <x>760</x>
-       <y>90</y>
-       <width>171</width>
+       <y>80</y>
+       <width>191</width>
        <height>51</height>
       </rect>
      </property>
@@ -245,47 +249,35 @@ QPushButton:hover {
     <widget class="QWidget" name="horizontalLayoutWidget_11">
      <property name="geometry">
       <rect>
-       <x>950</x>
-       <y>30</y>
-       <width>191</width>
+       <x>960</x>
+       <y>10</y>
+       <width>181</width>
        <height>301</height>
       </rect>
      </property>
      <layout class="QHBoxLayout" name="numpad_layout"/>
     </widget>
    </widget>
-   <widget class="QWidget" name="InformationWidget1" native="true">
+   <widget class="QWidget" name="RecentKeyContainer" native="true">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>510</y>
-      <width>291</width>
-      <height>211</height>
+      <x>280</x>
+      <y>470</y>
+      <width>771</width>
+      <height>80</height>
      </rect>
     </property>
-    <widget class="QLabel" name="label">
+    <widget class="QWidget" name="horizontalLayoutWidget_12">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>20</y>
-       <width>151</width>
-       <height>91</height>
+       <x>0</x>
+       <y>0</y>
+       <width>771</width>
+       <height>80</height>
       </rect>
      </property>
-     <property name="text">
-      <string>You have </string>
-     </property>
+     <layout class="QHBoxLayout" name="recent_key_layout"/>
     </widget>
-   </widget>
-   <widget class="QWidget" name="InformationWidget2" native="true">
-    <property name="geometry">
-     <rect>
-      <x>430</x>
-      <y>510</y>
-      <width>351</width>
-      <height>211</height>
-     </rect>
-    </property>
    </widget>
   </widget>
  </widget>
