--- a/KeyScan.ui
+++ b/KeyScan.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1280</width>
-    <height>720</height>
+    <height>719</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -33,9 +33,9 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>20</y>
-      <width>2791</width>
-      <height>751</height>
+      <y>0</y>
+      <width>1331</width>
+      <height>641</height>
      </rect>
     </property>
     <property name="currentIndex">
@@ -45,19 +45,19 @@
      <widget class="QWidget" name="typing_test_container" native="true">
       <property name="geometry">
        <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>1321</width>
-        <height>731</height>
+        <x>10</x>
+        <y>40</y>
+        <width>1281</width>
+        <height>651</height>
        </rect>
       </property>
       <widget class="QLabel" name="label">
        <property name="geometry">
         <rect>
-         <x>30</x>
-         <y>10</y>
-         <width>1161</width>
-         <height>281</height>
+         <x>60</x>
+         <y>30</y>
+         <width>1181</width>
+         <height>481</height>
         </rect>
        </property>
        <property name="styleSheet">
@@ -85,7 +85,7 @@ font-size: 60px;
      <widget class="QLabel" name="label_2">
       <property name="geometry">
        <rect>
-        <x>460</x>
+        <x>450</x>
         <y>0</y>
         <width>401</width>
         <height>81</height>
@@ -103,15 +103,15 @@ font-size: 60px;
      <widget class="QLabel" name="label_3">
       <property name="geometry">
        <rect>
-        <x>790</x>
-        <y>120</y>
-        <width>191</width>
+        <x>10</x>
+        <y>60</y>
+        <width>181</width>
         <height>61</height>
        </rect>
       </property>
       <property name="styleSheet">
        <string notr="true">* {
-font-size: 45px;
+font-size: 40px;
 }</string>
       </property>
       <property name="text">
@@ -121,10 +121,10 @@ font-size: 45px;
      <widget class="QWidget" name="bindings_list_container" native="true">
       <property name="geometry">
        <rect>
-        <x>790</x>
-        <y>190</y>
-        <width>481</width>
-        <height>481</height>
+        <x>10</x>
+        <y>120</y>
+        <width>311</width>
+        <height>491</height>
        </rect>
       </property>
       <widget class="QWidget" name="verticalLayoutWidget">
@@ -132,8 +132,8 @@ font-size: 45px;
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>481</width>
-         <height>481</height>
+         <width>311</width>
+         <height>491</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="bindings_layout"/>
@@ -142,27 +142,14 @@ font-size: 45px;
      <widget class="QPushButton" name="pushButton">
       <property name="geometry">
        <rect>
-        <x>1160</x>
-        <y>140</y>
+        <x>200</x>
+        <y>70</y>
         <width>111</width>
         <height>41</height>
        </rect>
       </property>
       <property name="text">
        <string>Clear All Bindings</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_4">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>150</y>
-        <width>321</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>WIP: key remapping works only when this page is showing</string>
       </property>
      </widget>
     </widget>
@@ -397,10 +384,116 @@ QPushButton {
         <height>41</height>
        </rect>
       </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
       <property name="text">
        <string>Reset Keyboard</string>
       </property>
      </widget>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="remapper_state_widget" native="true">
+    <property name="geometry">
+     <rect>
+      <x>1060</x>
+      <y>590</y>
+      <width>211</width>
+      <height>101</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">#remapper_state_widget {
+background-color: #e5e5e5;
+border: 1px solid #737373;
+padding: 2px 2px;
+border-radius: 5%;
+}</string>
+    </property>
+    <widget class="QWidget" name="verticalLayoutWidget_2">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>10</y>
+       <width>191</width>
+       <height>83</height>
+      </rect>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QLabel" name="label_4">
+        <property name="styleSheet">
+         <string notr="true">*{
+    font-size: 14px;
+    font-weight: bold;
+    color: black;
+}</string>
+        </property>
+        <property name="text">
+         <string>Remapper State</string>
+        </property>
+        <property name="textFormat">
+         <enum>Qt::TextFormat::PlainText</enum>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignmentFlag::AlignBottom|Qt::AlignmentFlag::AlignHCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,1">
+        <property name="spacing">
+         <number>2</number>
+        </property>
+        <property name="sizeConstraint">
+         <enum>QLayout::SizeConstraint::SetNoConstraint</enum>
+        </property>
+        <item>
+         <widget class="QLabel" name="is_running_label">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">* {
+    font-size: 12px;
+    color: black;
+}</string>
+          </property>
+          <property name="text">
+           <string>NOT RUNNING</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="change_remap_state_button">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">QPushButton {
+margin-left: 20px;
+}</string>
+          </property>
+          <property name="text">
+           <string>Start</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
     </widget>
    </widget>
   </widget>
